--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,14 @@
       margin: 0;
     }
   </style>
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.module.js",
+        "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/"
+      }
+    }
+  </script>
 </head>
 <body>
   <script type="module" src="/main.js"></script>
