added img to README.md, moved some files to .gitignore, updated JS path in HTML file

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,6 @@
   </script>
 </head>
 <body>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/JS/main.js"></script>
 </body>
 </html>
